Protected requests and authentication guard to protect pages

--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@auth0/angular-jwt": "^2.0.0",
     "@types/chart.js": "^2.7.37",
     "angular-bootstrap-md": "^6.2.5",
+    "angular-jwt": "^0.1.10",
+    "angular2-jwt": "^0.2.3",
     "angular5-csv": "^0.2.10",
     "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
