--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "ngrok": "^3.1.0",
     "passport": "*",
     "passport-jwt": "*",
-    "pg": "^7.6.1"
+    "pg": "^7.6.1",
+    "tslib": "^1.9.3"
   },
   "repository": {
     "type": "git",
