--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "*",
     "jsonwebtoken": "*",
     "mongoose": "*",
+    "ng2-pdf-viewer": "^5.2.3",
     "ngrok": "^3.1.0",
     "passport": "*",
     "passport-jwt": "*",
