--- a/angular-src/tsconfig.json
+++ b/angular-src/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "../public",
+    //"outDir":"./",
     "sourceMap": true,
     "declaration": false,
     "module": "es2015",
