--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng-flash-messages": "^0.3.0",
+    "ng2-pdf-viewer": "^5.2.3",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
