--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.41.2",
     "sequelize-auto": "^0.4.29",
+    "sequelize-typescript": "^0.6.6",
     "tslib": "^1.9.3"
   },
   "repository": {
